@@ -546,6 +546,13 @@ Use visual bell instead of beeping on errors. For now you can't turn off both,
 this will hopefully change.
 ____
 
+|\'visualbellstyle'| |\'t_vb'|
+||'visualbellstyle' 't_vb'|| string (default: "border: none; background-color: black;")
+____
+The CSS style to use for the visual bell. Set this to the empty string if you
+want no bell at all.
+____
+
 |\'wim'| |\'wildmode'|
 ||'wildmode' 'wim'||
 stringlist (default: "list:full")
