@@ -1,6 +1,7 @@
 <pre>
 2008-05-14:
     * version 1.1
+    * readded visualbellstyle (thanks mauke)
     * new popups=4 option
 
 2008-05-14:
